@@ -1,6 +1,6 @@
-EXTRA_DIST = fapolicyd.rules  fapolicyd.mounts fapolicyd.service
+EXTRA_DIST = fapolicyd.rules  fapolicyd.mounts fapolicyd.service fapolicyd.conf
 fapolicyddir = $(sysconfdir)/fapolicyd
-dist_fapolicyd_DATA = fapolicyd.rules fapolicyd.mounts
+dist_fapolicyd_DATA = fapolicyd.rules fapolicyd.mounts fapolicyd.conf
 systemdservicedir = $(systemdsystemunitdir)
 dist_systemdservice_DATA = fapolicyd.service
 
