@@ -1,0 +1,11 @@
+#
+# This file controls the configuration of the file access policy daemon
+#
+
+permissive = 0;
+nice_val = 10;
+q_size = 1024;
+uid = 0
+gid = 0
+details = 1;
+
