@@ -1,6 +1,6 @@
 /*
  * event.h - Header file for event.c
- * Copyright (c) 2016 Red Hat Inc., Durham, North Carolina.
+ * Copyright (c) 2016,2018 Red Hat Inc., Durham, North Carolina.
  * All Rights Reserved.
  *
  * This software may be freely redistributed and/or modified under the
@@ -30,6 +30,7 @@
 #include <sys/fanotify.h>
 #include "subject.h"
 #include "object.h"
+#include "daemon-config.h"
 
 typedef struct ev {
 	pid_t pid;
@@ -44,6 +45,6 @@ void destroy_event_system(void);
 int new_event(const struct fanotify_event_metadata *m, event_t *e);
 subject_attr_t *get_subj_attr(event_t *e, subject_type_t t);
 object_attr_t *get_obj_attr(event_t *e, object_type_t t);
-void run_usage_report(FILE *f);
+void run_usage_report(struct daemon_conf *config, FILE *f);
 
 #endif
