@@ -6,6 +6,7 @@
 - Update the rules for python 3.6 and remove systemd exclusion
 - Rename exec_dir rule option unpackaged to untrusted
 - Remove unneeded rpm code
+- Add support for daemon config file
 
 0.8.5
 - Update spec file and license info
